--- a/courses.html
+++ b/courses.html
@@ -48,7 +48,7 @@
                 <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="courses.html">Courses</a>
+                <a class="nav-link" aria-current="page" href="#">Courses</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="#">About Us</a>
@@ -76,7 +76,7 @@
       </nav>
 
       <!-- Feature Courses section  -->
-      <section id="our-mentors" class="my-3">
+      <section id="feature-courses" class="my-3">
         <div class="container">
           <h2 class="border-bottom">Feature Courses</h2>
           <div class="row mb-3">
@@ -130,7 +130,7 @@
       </section>
   
       <!-- Full-Stack Web Development Courses section  -->
-      <section id="our-mentors" class="my-3">
+      <section id="full-stack-web-development-courses" class="my-3">
         <div class="container">
           <h2 class="border-bottom">Full-Stack Web Development Courses</h2>
           <div class="row mb-3">
@@ -166,7 +166,7 @@
                   Introduction to Bootstrap
                 </div>
                   </p>
-                  <a href="#" class="btm">Enroll</a>
+                  <a href="#" class="btn">Enroll</a>
                 </div>
               </div>
             </div>
@@ -202,7 +202,7 @@
                   Managing Application State with Redux
                 </div>
                   </p>
-                  <a href="#" class="btm">Enroll</a>
+                  <a href="#" class="btn">Enroll</a>
                 </div>
               </div>
             </div>
@@ -238,7 +238,7 @@
                       Advanced Laravel Features
                     </div>
                   </p>
-                  <a href="#" class="btm">Enroll</a>
+                  <a href="#" class="btn">Enroll</a>
                 </div>
               </div>
             </div>
