--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="courses.html">Courses</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">About Us</a>
+              <a class="nav-link" aria-current="page" href="about.html">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Contact</a>
+              <a class="nav-link" aria-current="page" href="contact.html">Contact</a>
             </li>
           </ul>
           <form>
@@ -225,7 +225,7 @@
     </section>
 
     <!-- Student Reviews section  -->
-    <section id="our-mentors" class="my-3">
+    <section id="student-reviews" class="my-3">
       <div class="container">
         <h2 class="border-bottom">Student Reviews</h2>
         <div class="row mb-3">
