--- a/courses.html
+++ b/courses.html
@@ -135,7 +135,7 @@
           <h2 class="border-bottom">Full-Stack Web Development Courses</h2>
           <div class="row mb-3">
             <div class="col-lg-4 mt-3">
-              <div class="card">
+              <div class="card" >
                 <img
                   src="images/edited-course-1.jpg"
                   class="card-img-top"
@@ -171,7 +171,7 @@
               </div>
             </div>
             <div class="col-lg-4 mt-3">
-              <div class="card">
+              <div class="card" >
                 <img
                   src="images/edited-course-2.jpg"
                   class="card-img-top"
@@ -207,7 +207,7 @@
               </div>
             </div>
             <div class="col-lg-4 mt-3">
-              <div class="card">
+              <div class="card" >
                 <img
                   src="images/edited-course-3.jpg"
                   class="card-img-top"
@@ -245,6 +245,56 @@
           </div>
         </div>
       </section>
+
+      <!-- footer section  -->
+    <footer class="bg-light p-3 ">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 mt-2 text-center text-md-start">
+            <h3 class="h5">CreaNova Academy</h3>
+            <ul>
+              <li><a href="#">About</a></li>
+              <li><a href="#">What We Offer</a></li>
+              <li><a href="#">Careers</a></li>
+              <li><a href="#">Become a Partner</a></li>
+            </ul>
+          </div>
+          <div class="col-md-4 mt-2 text-center text-md-start">
+            <h3 class="h5">Community</h3>
+            <ul>
+              <li><a href="#">Mentees</a></li>
+              <li><a href="#">Partners</a></li>
+              <li><a href="#">Tech Blog</a></li>
+              <li><a href="#">Teaching Centers</a></li>
+            </ul>
+          </div>
+          <div class="col-md-4 mt-2 text-center text-md-start">
+            <h3 class="h5">More</h3>
+            <ul>
+              <li><a href="#">Terms</a></li>
+              <li><a href="#">Privacy</a></li>
+              <li><a href="#">Help</a></li>
+              <li><a href="#">Accessibility</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-6 text-center text-md-start">
+            <p>copyright &copy; 2024. All Rights Reserved!</p>
+          </div>
+          <div class="col-md-6 text-center text-md-end">
+            <div class="social-icons">
+              <i class="bi bi-facebook ms-3"></i>
+              <i class="bi bi-youtube ms-3"></i>
+              <i class="bi bi-linkedin ms-3"></i>
+              <i class="bi bi-twitter-x ms-3"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
     
     <script
     src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/js/all.min.js"
