--- a/index.html
+++ b/index.html
@@ -298,6 +298,56 @@
       </div>
     </section>
 
+    <!-- footer section  -->
+    <footer class="bg-light p-3">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 mt-2 text-center text-md-start">
+            <h3 class="h5">CreaNova Academy</h3>
+            <ul>
+              <li><a href="#">About</a></li>
+              <li><a href="#">What We Offer</a></li>
+              <li><a href="#">Careers</a></li>
+              <li><a href="#">Become a Partner</a></li>
+            </ul>
+          </div>
+          <div class="col-md-4 mt-2 text-center text-md-start">
+            <h3 class="h5">Community</h3>
+            <ul>
+              <li><a href="#">Mentees</a></li>
+              <li><a href="#">Partners</a></li>
+              <li><a href="#">Tech Blog</a></li>
+              <li><a href="#">Teaching Centers</a></li>
+            </ul>
+          </div>
+          <div class="col-md-4 mt-2 text-center text-md-start">
+            <h3 class="h5">More</h3>
+            <ul>
+              <li><a href="#">Terms</a></li>
+              <li><a href="#">Privacy</a></li>
+              <li><a href="#">Help</a></li>
+              <li><a href="#">Accessibility</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-6 text-center text-md-start">
+            <p>copyright &copy; 2024. All Rights Reserved!</p>
+          </div>
+          <div class="col-md-6 text-center text-md-end">
+            <div class="social-icons">
+              <i class="bi bi-facebook ms-3"></i>
+              <i class="bi bi-youtube ms-3"></i>
+              <i class="bi bi-linkedin ms-3"></i>
+              <i class="bi bi-twitter-x ms-3"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/js/all.min.js"
       integrity="sha512-6sSYJqDreZRZGkJ3b+YfdhB3MzmuP9R7X1QZ6g5aIXhRvR1Y/N/P47jmnkENm7YL3oqsmI6AK+V6AD99uWDnIw=="
