--- a/contact.html
+++ b/contact.html
@@ -46,13 +46,19 @@
               <a class="nav-link" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="courses.html">Courses</a>
+              <a class="nav-link" aria-current="page" href="courses.html"
+                >Courses</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="about.html">About Us</a>
+              <a class="nav-link" aria-current="page" href="about.html"
+                >About Us</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
+              <a class="nav-link active" aria-current="page" href="contact.html"
+                >Contact</a
+              >
             </li>
           </ul>
           <form>
@@ -72,68 +78,165 @@
         </div>
       </div>
     </nav>
-
+    <!-- contact us section -->
+    <section id="contact" class="my-2">
+      <div class="title">
+        <h1>Contact Us</h1>
+        <div class="row mb-3">
+          <div class="col-lg-4 mt-3 text-center">
+            <i class="" style="height: 150px">FaceBook</i>
+            <p></p>
+          </div>
+          <div class="col-lg-4 mt-3 text-center">
+            <i class="" style="height: 150px">Email</i>
+            <p></p>
+          </div>
+          <div class="col-lg-4 mt-3 text-center">
+            <i class="" style="height: 150px">twitter</i>
+            <p></p>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- footer section  -->
     <footer class="bg-warning-subtle p-3">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-4 mt-2 text-center text-md-start">
-              <h3 class="h5">CreaNova Academy</h3>
-              <ul>
-                <li><a class="link-warning link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="#">About</a></li>
-                <li><a class="link-warning link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="#">What We Offer</a></li>
-                <li><a class="link-warning link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="#">Careers</a></li>
-                <li><a class="link-warning link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="#">Become a Partner</a></li>
-              </ul>
-            </div>
-            <div class="col-md-4 mt-2 text-center text-md-start">
-              <h3 class="h5">Community</h3>
-              <ul>
-                <li><a class="link-warning link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="#">Mentees</a></li>
-                <li><a class="link-warning link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="#">Partners</a></li>
-                <li><a class="link-warning link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="#">Tech Blog</a></li>
-                <li><a class="link-warning link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="#">Teaching Centers</a></li>
-              </ul>
-            </div>
-            <div class="col-md-4 mt-2 text-center text-md-start">
-              <h3 class="h5">More</h3>
-              <ul>
-                <li><a class="link-warning link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="#">Terms</a></li>
-                <li><a class="link-warning link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="#">Privacy</a></li>
-                <li><a class="link-warning link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="#">Help</a></li>
-                <li><a class="link-warning link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="#">Accessibility</a></li>
-                <li><a class="link-warning link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="#">Contact</a></li>
-              </ul>
-            </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 mt-2 text-center text-md-start">
+            <h3 class="h5">CreaNova Academy</h3>
+            <ul>
+              <li>
+                <a
+                  class="link-warning link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover"
+                  href="#"
+                  >About</a
+                >
+              </li>
+              <li>
+                <a
+                  class="link-warning link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover"
+                  href="#"
+                  >What We Offer</a
+                >
+              </li>
+              <li>
+                <a
+                  class="link-warning link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover"
+                  href="#"
+                  >Careers</a
+                >
+              </li>
+              <li>
+                <a
+                  class="link-warning link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover"
+                  href="#"
+                  >Become a Partner</a
+                >
+              </li>
+            </ul>
           </div>
-  
-          <div class="row">
-            <div class="col-md-6 text-center text-md-start">
-              <p>copyright &copy; 2024. All Rights Reserved!</p>
-            </div>
-            <div class="col-md-6 text-center text-md-end">
-              <div class="social-icons">
-                <i class="fa-brands fa-facebook ms-3"></i>
-                <i class="fa-brands fa-youtube ms-3"></i>
-                <i class="fa-brands fa-linkedin ms-3"></i>
-                <i class="fa-brands fa-x-twitter ms-3"></i>
-              </div>
+          <div class="col-md-4 mt-2 text-center text-md-start">
+            <h3 class="h5">Community</h3>
+            <ul>
+              <li>
+                <a
+                  class="link-warning link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover"
+                  href="#"
+                  >Mentees</a
+                >
+              </li>
+              <li>
+                <a
+                  class="link-warning link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover"
+                  href="#"
+                  >Partners</a
+                >
+              </li>
+              <li>
+                <a
+                  class="link-warning link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover"
+                  href="#"
+                  >Tech Blog</a
+                >
+              </li>
+              <li>
+                <a
+                  class="link-warning link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover"
+                  href="#"
+                  >Teaching Centers</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-4 mt-2 text-center text-md-start">
+            <h3 class="h5">More</h3>
+            <ul>
+              <li>
+                <a
+                  class="link-warning link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover"
+                  href="#"
+                  >Terms</a
+                >
+              </li>
+              <li>
+                <a
+                  class="link-warning link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover"
+                  href="#"
+                  >Privacy</a
+                >
+              </li>
+              <li>
+                <a
+                  class="link-warning link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover"
+                  href="#"
+                  >Help</a
+                >
+              </li>
+              <li>
+                <a
+                  class="link-warning link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover"
+                  href="#"
+                  >Accessibility</a
+                >
+              </li>
+              <li>
+                <a
+                  class="link-warning link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover"
+                  href="#"
+                  >Contact</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-6 text-center text-md-start">
+            <p>copyright &copy; 2024. All Rights Reserved!</p>
+          </div>
+          <div class="col-md-6 text-center text-md-end">
+            <div class="social-icons">
+              <i class="fa-brands fa-facebook ms-3"></i>
+              <i class="fa-brands fa-youtube ms-3"></i>
+              <i class="fa-brands fa-linkedin ms-3"></i>
+              <i class="fa-brands fa-x-twitter ms-3"></i>
             </div>
           </div>
         </div>
-      </footer>
-  
-      <script
-        src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/js/all.min.js"
-        integrity="sha512-6sSYJqDreZRZGkJ3b+YfdhB3MzmuP9R7X1QZ6g5aIXhRvR1Y/N/P47jmnkENm7YL3oqsmI6AK+V6AD99uWDnIw=="
-        crossorigin="anonymous"
-        referrerpolicy="no-referrer"
-      ></script>
-      <script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"
-      ></script>
-    </body>
-  </html>
+      </div>
+    </footer>
+
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/js/all.min.js"
+      integrity="sha512-6sSYJqDreZRZGkJ3b+YfdhB3MzmuP9R7X1QZ6g5aIXhRvR1Y/N/P47jmnkENm7YL3oqsmI6AK+V6AD99uWDnIw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
