--- a/contact.html
+++ b/contact.html
@@ -84,16 +84,19 @@
         <h1>Contact Us</h1>
         <div class="row mb-3">
           <div class="col-lg-4 mt-3 text-center">
-            <i class="" style="height: 150px">FaceBook</i>
-            <p></p>
+            <i class="fa-brands fa-facebook" style="height: 150px">FaceBook</i>
+            <h4>Contact us with facebook</h4>
+            <a href="https://www.facebook.com/" class="btm py-2">facebook</a>
           </div>
           <div class="col-lg-4 mt-3 text-center">
-            <i class="" style="height: 150px">Email</i>
-            <p></p>
+            <i class="fa-solid fa-envelope" style="height: 150px">Email</i>
+            <h4>Send email to us</h4>
+            <a href="https://mail.google.com/mail" class="btm py-2">Email</a>
           </div>
           <div class="col-lg-4 mt-3 text-center">
-            <i class="" style="height: 150px">twitter</i>
-            <p></p>
+            <i class="fa-brands fa-x-twitter" style="height: 150px">twitter</i>
+            <h4>Check on the X</h4>
+            <a href="https://x.com/" class="btm py-2">X(twitter)</a>
           </div>
         </div>
       </div>
