--- a/courses.html
+++ b/courses.html
@@ -51,10 +51,10 @@
                 <a class="nav-link active" aria-current="page" href="#">Courses</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">About Us</a>
+                <a class="nav-link" aria-current="page" href="about.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Contact</a>
+                <a class="nav-link" aria-current="page" href="contact.html">Contact</a>
               </li>
             </ul>
             <form>
