--- a/contact.html
+++ b/contact.html
@@ -87,16 +87,31 @@
             <i class="fa-brands fa-facebook" style="height: 150px">FaceBook</i>
             <h4>Contact us with facebook</h4>
             <a href="https://www.facebook.com/" class="btm py-2">facebook</a>
+            <p>
+              Connect with us on Facebook to stay updated with the latest
+              announcements and school events. Send us a message through our
+              business page for quick responses to your queries.
+            </p>
           </div>
           <div class="col-lg-4 mt-3 text-center">
             <i class="fa-solid fa-envelope" style="height: 150px">Email</i>
             <h4>Send email to us</h4>
             <a href="https://mail.google.com/mail" class="btm py-2">Email</a>
+            <p>
+              For detailed inquiries or assistance, reach us via email, and
+              we’ll get back to you promptly. Email is the best channel for more
+              personalized and in-depth communication with our team.
+            </p>
           </div>
           <div class="col-lg-4 mt-3 text-center">
             <i class="fa-brands fa-x-twitter" style="height: 150px">twitter</i>
             <h4>Check on the X</h4>
             <a href="https://x.com/" class="btm py-2">X(twitter)</a>
+            <p>
+              Follow us on Twitter for real-time updates and important
+              notifications. Tweet or direct message us for swift support and
+              engagement.
+            </p>
           </div>
         </div>
       </div>
