--- a/contact.html
+++ b/contact.html
@@ -88,9 +88,7 @@
             <h4>Contact us with facebook</h4>
             <a href="https://www.facebook.com/" class="btm py-2">facebook</a>
             <p>
-              Connect with us on Facebook to stay updated with the latest
-              announcements and school events. Send us a message through our
-              business page for quick responses to your queries.
+              Message us on Facebook for updates and quick responses to your questions
             </p>
           </div>
           <div class="col-lg-4 mt-3 text-center">
@@ -98,9 +96,7 @@
             <h4>Send email to us</h4>
             <a href="https://mail.google.com/mail" class="btm py-2">Email</a>
             <p>
-              For detailed inquiries or assistance, reach us via email, and
-              we’ll get back to you promptly. Email is the best channel for more
-              personalized and in-depth communication with our team.
+              Contact us via email for personalized assistance and detailed inquiries.
             </p>
           </div>
           <div class="col-lg-4 mt-3 text-center">
@@ -108,9 +104,7 @@
             <h4>Check on the X</h4>
             <a href="https://x.com/" class="btm py-2">X(twitter)</a>
             <p>
-              Follow us on Twitter for real-time updates and important
-              notifications. Tweet or direct message us for swift support and
-              engagement.
+              Reach out to us on Twitter for real-time updates and quick support.
             </p>
           </div>
         </div>
