--- a/contact.html
+++ b/contact.html
@@ -87,16 +87,18 @@
             <i class="fa-brands fa-facebook" style="height: 150px">FaceBook</i>
             <h4>Contact us with facebook</h4>
             <a href="https://www.facebook.com/" class="btm py-2">facebook</a>
-            <p>
-              Message us on Facebook for updates and quick responses to your questions
+            <p class="ms-2">
+              Message us on Facebook for updates and quick responses to your
+              questions
             </p>
           </div>
           <div class="col-lg-4 mt-3 text-center">
             <i class="fa-solid fa-envelope" style="height: 150px">Email</i>
             <h4>Send email to us</h4>
             <a href="https://mail.google.com/mail" class="btm py-2">Email</a>
-            <p>
-              Contact us via email for personalized assistance and detailed inquiries.
+            <p class="mb-2">
+              Contact us via email for personalized assistance and detailed
+              inquiries.
             </p>
           </div>
           <div class="col-lg-4 mt-3 text-center">
@@ -104,7 +106,8 @@
             <h4>Check on the X</h4>
             <a href="https://x.com/" class="btm py-2">X(twitter)</a>
             <p>
-              Reach out to us on Twitter for real-time updates and quick support.
+              Reach out to us on Twitter for real-time updates and quick
+              support.
             </p>
           </div>
         </div>
