--- a/contact.html
+++ b/contact.html
@@ -81,13 +81,13 @@
     <!-- contact us section -->
     <section id="contact" class="my-2">
       <div class="title">
-        <h1>Contact Us</h1>
+        <h1 class="border-bottom border-5 border-warning-subtle pb-3">Contact Us</h1>
         <div class="row mb-3">
           <div class="col-lg-4 mt-3 text-center">
             <i class="fa-brands fa-facebook" style="height: 150px">FaceBook</i>
             <h4>Contact us with facebook</h4>
             <a href="https://www.facebook.com/" class="btm py-2">facebook</a>
-            <p class="ms-2">
+            <p class="mx-3 my-3">
               Message us on Facebook for updates and quick responses to your
               questions
             </p>
@@ -96,7 +96,7 @@
             <i class="fa-solid fa-envelope" style="height: 150px">Email</i>
             <h4>Send email to us</h4>
             <a href="https://mail.google.com/mail" class="btm py-2">Email</a>
-            <p class="mb-2">
+            <p class="mx-3 my-3">
               Contact us via email for personalized assistance and detailed
               inquiries.
             </p>
@@ -105,7 +105,7 @@
             <i class="fa-brands fa-x-twitter" style="height: 150px">twitter</i>
             <h4>Check on the X</h4>
             <a href="https://x.com/" class="btm py-2">X(twitter)</a>
-            <p>
+            <p class="mx-3 my-3">
               Reach out to us on Twitter for real-time updates and quick
               support.
             </p>
